Tue May 26 15:11:19 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: change CodeGenerator
	  output: String -> AssemblyFile.

	* net/loveruby/cflat/sysdep/AssemblyFile.java: new interface.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: implement it.

	* net/loveruby/cflat/sysdep/CodeGenerator.java: #generate returns
	  AssemblyFile.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

Tue May 26 13:40:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86: rename class: RegKind ->
	  RegisterClass.

	* net/loveruby/cflat/sysdep/x86: follow it.

Tue May 26 13:23:56 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm: refactoring: rename class: AsmStatistics
	  -> Statistics.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: follow it.

Tue May 26 13:18:52 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm: refactoring: rename class: AsmOperand ->
	  Operand.

	* net/loveruby/cflat/asm: follow it.

	* net/loveruby/cflat/sysdep/x86: follow it.

	* net/loveruby/cflat/ir: follow it.

	* net/loveruby/cflat/entity: follow it.

Tue May 26 13:11:08 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/AsmComment.java -> Comment.java

Tue May 26 12:57:48 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (writeFile): treat "-"
	  as stdout.

Tue May 26 12:48:40 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (dumpAsm): do not
	  print extra '\n'.

Tue May 26 12:21:18 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: check unknown file
	  types.

	* net/loveruby/cflat/compiler/SourceFile.java: new method
	  #isKnownFileType.

Tue May 26 11:59:08 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: allow --verbose-asm
	  too.

Tue May 26 11:50:11 2009  Minero Aoki  <aamine@loveruby.net>
