@@ -1,3 +1,8 @@
+Tue May 26 15:16:04 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: refactoring:
+	  apply strict visibility.
+
 Tue May 26 15:11:19 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java: change CodeGenerator
